# bist-research

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pytest.ini
apps/market_radar/: Dockerfile  README.md  pyproject.toml
apps/market_radar/scripts/: analyze_asof_scan_performance.py  analyze_daily_radar_april_replay.py  analyze_daily_radar_stability.py  analyze_production_score_topn.py  analyze_radar_filter_monthly_replay.py  analyze_radar_rolling_hold20_portfolio.py  analyze_regime_adaptive_filters.py  analyze_scan_metric_quality.py  backfill_candidate_features_partitioned.py  backfill_market_radar_ohlcv.py  backfill_ohlcv_history.py  backtest_interest_periods.py  backtest_interest_signals.py  check_prebaked_db.py  check_xu100_index_max.py  com.eniskorkut.bist-radar.telegram.plist  compare_candidate_fast_outputs.py  compare_filter_config_outputs.py  configure_telegram_env.sh  export_volume_spike_candidate_features.py  fetch_one_symbol_debug.py  fetch_some_symbols.py  fetch_xu100_now.py  inspect_symbol_records.py  install_telegram_radar_launchd.sh  optimize_volume_spike_quality_filters.py  run_daily_radar_and_send_telegram.py  run_telegram_radar_launchd.sh  scan_bist_interest.py  send_daily_radar_telegram_alert.py  test_borsapy_direct.py
apps/market_radar/tests/: test_analyze_asof_scan_performance.py  test_analyze_daily_radar_april_replay.py  test_analyze_daily_radar_stability.py  test_analyze_production_score_topn.py  test_analyze_radar_filter_monthly_replay.py  test_analyze_radar_rolling_hold20_portfolio.py  test_analyze_regime_adaptive_filters.py  test_backfill_candidate_features_partitioned.py  test_backtest_cli.py  test_backtest_engine.py  test_backtest_performance.py  test_cli_scan.py  (+7 more)
apps/us_research/: Dockerfile  README.md  pyproject.toml
apps/valuation/: Dockerfile  README.md  pyproject.toml
borsapy-alert/: Dockerfile  README.md  alerts.csv  pyproject.toml
borsapy-alert/scripts/: run_volume_alert.py
(+379 files in other folders)
