[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bist-volume-alert"
version = "0.1.0"
description = "BIST live volume alert runner using borsapy TradingViewStream."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "borsapy>=0.9.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
