[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bist-valuation"
version = "0.1.0"
description = "Automatic BIST valuation module using borsapy financials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "borsapy>=0.9.0",
    "pandas>=2.0.0",
    "streamlit>=1.34.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
